fix mobie name overflow

--- a/Assets/Styles/styles.css
+++ b/Assets/Styles/styles.css
@@ -220,7 +220,7 @@ div.social-links{
     }
 
     .name-header {
-        font-size: 8em;
+        font-size: 5rem;
         margin-bottom: 16px;
     }
 
